pico-toggle was too small on ipad prod, but was correct on browser reponsive view

--- a/src/main/css/search-form.css
+++ b/src/main/css/search-form.css
@@ -108,7 +108,7 @@
 }
 
 .pico-toggle{
-	width: 57%;
+	width: 60%;
     margin: auto;
     display: block;
 }
